WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91695
Hit testing in the gap between pages returns incorrect results
https://bugs.webkit.org/show_bug.cgi?id=91695
Summary
Hit testing in the gap between pages returns incorrect results
mitz
Reported
2012-07-18 17:04:42 PDT
<
rdar://problem/11887161
>
Attachments
Account for columns when setting the local point (in the root element) when updating a hit test result in the RenderView
(5.20 KB, patch)
2012-07-18 17:08 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-07-18 17:08:59 PDT
Created
attachment 153140
[details]
Account for columns when setting the local point (in the root element) when updating a hit test result in the RenderView
Dave Hyatt
Comment 2
2012-07-18 17:11:33 PDT
Comment on
attachment 153140
[details]
Account for columns when setting the local point (in the root element) when updating a hit test result in the RenderView r=me
mitz
Comment 3
2012-07-18 17:20:01 PDT
Fixed in <
http://trac.webkit.org/r123050
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug