Hit testing in the gap between pages returns incorrect results https://bugs.webkit.org/show_bug.cgi?id=91695

Reviewed by Dave Hyatt.

Source/WebCore:

Test: fast/multicol/hit-test-gap-between-pages.html

* rendering/RenderBlock.h:
(RenderBlock): Promoted adjustPointToColumnContents from private to protected.
* rendering/RenderView.cpp:
(WebCore::RenderView::updateHitTestResult): If we get here, and we make the document element
the inner node, adjust the local point for columns.

LayoutTests:

* fast/multicol/hit-test-gap-between-pages-expected.txt: Added.
* fast/multicol/hit-test-gap-between-pages.html: Added.



Canonical link: https://commits.webkit.org/109508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123050 268f45cc-cd09-0410-ab3c-d52691b4dbfc